--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
-    "jest": "^26.4.0",
-    "prettier": "^2.0.5"
+    "jest": "^26.4.0"
   },
   "scripts": {
     "prettify-upgrade": ". ./bin/upgrade-branches.sh",
     "prettify-all": ". ./bin/prettify-all.sh",
     "test": "jest"
+  },
+  "devDependencies": {
+    "@prettier/plugin-xml": "^0.11.0",
+    "prettier": "^2.0.5"
   }
 }
